# SceneTree

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
doc/: SceneTreeSystem.md  design_document.md
examples/: CMakeLists.txt  scene_management_example.cpp
include/SceneTree/: Scene.h  SceneIO.h  SceneManager.h  SceneNode.h  SceneNodePropertyObserver.h  SceneTree.h
src/: CMakeLists.txt  Scene.cpp  Scene.h  SceneIO.cpp  SceneIO.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneNodePropertyObserver.cpp  SceneNodePropertyObserver.h  SceneObject.h  SceneTree.cpp  SceneTree.h
tests/: CMakeLists.txt  scene_io_tests.cpp  scene_manager_tests.cpp  scene_node_tests.cpp  scene_tree_tests.cpp
